# laundry_checker

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
custom_components/laundry_checker/: README.md  __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  hacs.json  helpers.py  laundry_checker.py  manifest.json  sensor.py
custom_components/laundry_checker/tests/: __init__.py  test_binary_sensor.py  test_config_flow.py  test_coordinator_errors.py
custom_components/laundry_checker/translations/: en.json  zh-Hans.json
